--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "8080:80"  # Map port 80 in the container to port 8080 on your host
     volumes:
-      - .:/var/www/html  # Mount your project directory to /var/www/html in the container
+      - ./sleep-monitor-3e4c3-firebase-adminsdk-wbxh8-5a53c375bb.json:/var/www/html/sleep-monitor-3e4c3-firebase-adminsdk-wbxh8-5a53c375bb.json
     environment:
-      - GOOGLE_APPLICATION_CREDENTIALS=/var/www/html/firebase-key.json  # Ensure this points to the correct location for Firebase credentials
+      GOOGLE_APPLICATION_CREDENTIALS: /var/www/html/sleep-monitor-3e4c3-firebase-adminsdk-wbxh8-5a53c375bb.json  # Ensure this points to the correct location for Firebase credentials
     command: ["apache2-foreground"]
