--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,11 @@ services:
   web:
     build:
       context: .
+      dockerfile: Dockerfile
     ports:
-      - "8080:80"  # Map port 80 in the container to port 8080 on your host
+      - "8080:80"
     volumes:
-      - .:/var/www/html  # Mount the current directory to /var/www/html inside the container
+      - .:/var/www/html 
     environment:
       GOOGLE_APPLICATION_CREDENTIALS: /var/www/html/sleep-monitor-3e4c3-firebase-adminsdk-wbxh8-5a53c375bb.json  # Firebase credentials path
     command: ["apache2-foreground"]
