Updating the docker-compose.yml file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,6 @@ services:
     volumes:
       - .:/var/www/html
     environment:
+      FIREBASE_ADMIN_SDK_JSON: $FIREBASE_ADMIN_SDK_JSON
       GOOGLE_APPLICATION_CREDENTIALS: /var/www/html/sleep-monitor-3e4c3-firebase-adminsdk-wbxh8-5a53c375bb.json
     command: ["/bin/sh", "-c", "echo \"$FIREBASE_ADMIN_SDK_JSON\" > /var/www/html/sleep-monitor-3e4c3-firebase-adminsdk-wbxh8-5a53c375bb.json && apache2-foreground"]
